[package]
name = "wonderwall"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.26", features = ["derive"] }
fern = { version = "0.7.1", features = ["colored"] }
humantime = "2.1.0"
log = "0.4.25"
nix = { version = "0.29.0", features = ["process"] }
rand = "0.9.0"
regex = "1.11.1"
